crates/piper-protocol/tests/ui/direct_field_access.stderr
error[E0616]: field `id` of struct `piper_protocol::frame::PiperFrame` is private
 --> tests/ui/direct_field_access.rs:3:19
  |
3 |     let _ = frame.id;
  |                   ^^ private field
  |
help: a method `id` also exists, call it with parentheses
  |
3 |     let _ = frame.id();
  |                     ++
